syntax = "proto3";

package com.salty.protos;

import "google/protobuf/any.proto";

option java_multiple_files = true;

// Basic Request
message GrpcReq {
    string deviceId = 1;
    string version = 2;
    Language language = 3;
    OS os = 4;

    string token = 5;

    google.protobuf.Any data = 6;

    enum Language {
        CHINESE = 0;
        ENGLISH = 1;
    }

    enum OS {
        UNKNOWN = 0;
        ANDROID = 1;
        IOS = 2;
        WINDOWS = 3;
    }
}

// Basic Response
message GrpcResp {
    int32 code = 1;
    string message = 2;
    google.protobuf.Any data = 3;
}

message UserProfile {
    string userId = 1;
    string telephone = 2;
    string email = 3;
    string nickname = 4;
    string avatar = 5;
    string description = 6;
    Sex sex = 7;
    int64 birthday = 8;
    string location = 9;

    enum Sex {
        NOT_SET = 0;
        MALE = 1;
        FEMALE = 2;
    }
}

message ContactProfile {
    UserProfile userProfile = 1;
    ContactRemark remarkInfo = 2;
}

message ContactRemark {
    string remarkName = 1;
    string description = 2;
    repeated string telephones = 3;
    repeated string tags = 4;
}

message GroupProfile {
    string groupId = 1;
    string name = 2;
    int64 createTime = 3;
    string ownerUserId = 4; //群组的UserId
    string avatar = 5; //群头像
    string notice = 6; //群公告
    repeated GroupMemberProfile members = 7; //群成员，所有人，包含自己
}

message GroupMemberProfile {
    string groupId = 1;
    string alias = 2;
    GroupRole role = 3;
    int64 joinTime = 4;
    UserProfile userProfile = 5;

    enum GroupRole {
        NONE = 0;
        ADMINISTRATOR = 1;
    }
}

message Conversation {
    string conversationId = 1; //会话ID
    string conversationTitle = 2; //会话标题
    string portraitUrl = 3; //会话的头像
    int32 unreadMessageCount = 4; //未读消息数量
    bool isTop = 5; //是否会话置顶
    Message latestMessage = 6; //会话最后一条信息，也就是最新的一条信息，会话列表要显示
    string draft = 7; //输入草稿，没输入完就返回，保存输入信息，这个信息无需服务器保存，只存客户端
    ConversationType conversationType = 8; //会话类型
    NotificationStatus notificationStatus = 9; //会话状态

    //会话类型
    enum ConversationType {
        NONE = 0; //无
        PRIVATE = 1; //私聊
        GROUP = 2; //群聊
    }

    //会话提醒状态
    enum NotificationStatus {
        NOTIFY = 0; //提醒
        DO_NOT_DISTURB = 1; //免打扰
    }
}

message Message {
    string messageID = 1; //消息ID
    string sortID = 2; //排序ID，用来排序，递增或者递减，消息的顺序基于它
    string senderUserId = 3; //发送者ID
    string targetId = 4; //消息的接收者ID，可能是userId也可能是GroupId
    int64 sendTime = 5; //发送时间，服务器收到并入库的时间，不是客户端的时间
    int64 receivedTime = 6; //接受消息，服务器把消息推送给客户端的时间
    int64 readTime = 7; //阅读时间，就是消息没查看的时间，会有一个set消息为已读状态的接口
    SentStatus sentStatus = 8;
    ReceivedStatus receivedStatus = 9;

    //会话提醒状态
    enum SentStatus {
        SENDING = 0; //提醒
        FAILED = 1; //免打扰
        READ = 2; //对面已读
    }

    //会话提醒状态
    enum ReceivedStatus {
        RECEIVED = 0; //提醒
        DOWNLOADED = 1; //已经下载，对于那种视频，图片等内容
    }

    //消息的发送方向
    enum MessageDirection {
        SEND = 0; //发送
        RECEIVE = 1; //接收
    }
}

message EmptyResp {
}